Task5/task5-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: task5
spec:
  podSelector: {}
  policyTypes:
    - Ingress
